# gcontributor

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: committer.rs  converter.rs  data_access.rs  error.rs  lib.rs  main.rs
src/converters/: jpeg_converter.rs
src/gcontributor/: Commiter.py  Converter.py  CustTypes.py  DataAccess.py  Main.py
tests/: test_Main.py
