[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcontributor"
version = "0.0.1"
autors = [
	{ name="k2zylstra" }
]
description = "A python package to add flare to your git contributions page"
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/k2zylstra/git-contributor"
Homepage = "https://github.com/k2zylstra/git-contributor/issues"

